--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,23 @@ dependencies {
   testImplementation 'junit:junit:4.12'
   androidTestImplementation 'com.android.support.test:runner:1.0.2'
   androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+  // ViewModel and LiveData
+  implementation "android.arch.lifecycle:extensions:1.1.1"
+  annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
+
+  // Room (use 1.1.0-beta3 for latest beta)
+  implementation "android.arch.persistence.room:runtime:1.1.1"
+  annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
+
+  // Paging
+  implementation "android.arch.paging:runtime:1.0.1"
+
+  // Test helpers for LiveData
+  testImplementation "android.arch.core:core-testing:1.1.1"
+
+  // Test helpers for Room
+  testImplementation "android.arch.persistence.room:testing:1.1.1"
+
+  implementation 'com.github.humazed:RoomAsset:1.0.3'
 }
