--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,15 @@
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
+    <activity
+        android:name=".ui.DefinitionActivity"
+        android:label="@string/app_name"
+        android:parentActivityName=".ui.DrawerActivity"
+        android:theme="@style/AppTheme.NoActionBar">
+      <meta-data
+          android:name="android.support.PARENT_ACTIVITY"
+          android:value="net.emojiparty.android.jishotomo.ui.DrawerActivity"/>
+    </activity>
   </application>
 
 </manifest>
