--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,24 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:supportsRtl="true"
       android:theme="@style/AppTheme">
+
     <activity
         android:name=".ui.activities.DrawerActivity"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme.NoActionBar">
+        android:theme="@style/AppTheme.NoActionBar"
+        android:launchMode="singleTop">
       <intent-filter>
-        <action android:name="android.intent.action.MAIN"/>
+        <action android:name="android.intent.action.SEARCH"/>
 
+        <action android:name="android.intent.action.MAIN"/>
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
+
+      <meta-data
+          android:name="android.app.searchable"
+          android:resource="@xml/searchable"/>
     </activity>
+
     <activity
         android:name=".ui.activities.DefinitionActivity"
         android:label="@string/app_name"
@@ -27,12 +35,16 @@
       <meta-data
           android:name="android.support.PARENT_ACTIVITY"
           android:value="net.emojiparty.android.jishotomo.ui.activities.DrawerActivity"/>
+
       <intent-filter>
-        <category android:name="android.intent.category.DEFAULT" />
-        <action android:name="android.intent.action.VIEW" />
-        <data android:scheme="net.emojiparty.android.jishotomo" />
+        <category android:name="android.intent.category.DEFAULT"/>
+
+        <action android:name="android.intent.action.VIEW"/>
+
+        <data android:scheme="net.emojiparty.android.jishotomo"/>
       </intent-filter>
     </activity>
+
   </application>
 
 </manifest>
