--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
 
     <activity
         android:name=".ui.activities.DrawerActivity"
-        android:label="@string/app_name"
+        android:label=""
         android:theme="@style/AppTheme.NoActionBar"
         android:launchMode="singleTop">
       <intent-filter>
