--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,16 +10,15 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:supportsRtl="true"
       android:theme="@style/AppTheme">
-
     <activity
         android:name=".ui.activities.DrawerActivity"
         android:label=""
-        android:theme="@style/AppTheme.NoActionBar"
-        android:launchMode="singleTop">
+        android:launchMode="singleTop"
+        android:theme="@style/AppTheme.NoActionBar">
       <intent-filter>
         <action android:name="android.intent.action.SEARCH"/>
-
         <action android:name="android.intent.action.MAIN"/>
+
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
 
@@ -27,7 +26,6 @@
           android:name="android.app.searchable"
           android:resource="@xml/searchable"/>
     </activity>
-
     <activity
         android:name=".ui.activities.DefinitionActivity"
         android:label="@string/app_name"
@@ -46,6 +44,21 @@
       </intent-filter>
     </activity>
 
+    <receiver android:name=".ui.widget.JishoTomoJlptWidget">
+      <intent-filter>
+        <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
+      </intent-filter>
+
+      <meta-data
+          android:name="android.appwidget.provider"
+          android:resource="@xml/jisho_tomo_jlpt_widget_info"/>
+    </receiver>
+
+    <activity android:name=".ui.widget.JishoTomoJlptWidgetConfigureActivity">
+      <intent-filter>
+        <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE"/>
+      </intent-filter>
+    </activity>
   </application>
 
 </manifest>
