--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,9 @@ dependencies {
   implementation "com.google.dagger:dagger-android-support:2.13"
   implementation "com.google.dagger:dagger:2.13"
   annotationProcessor "com.google.dagger:dagger-compiler:2.13"
+
+  // Firebase Core: Analytics, Ads, Crash Reporting
+  implementation 'com.google.firebase:firebase-core:16.0.3'
 }
+
+apply plugin: 'com.google.gms.google-services'
