--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,14 @@ buildscript {
   repositories {
     google()
     jcenter()
+    maven {
+      url 'https://maven.fabric.io/public'
+    }
   }
   dependencies {
     classpath 'com.android.tools.build:gradle:3.1.4'
     classpath 'com.google.gms:google-services:4.0.1'
-
+    classpath 'io.fabric.tools:gradle:1.25.4'
 
     // NOTE: Do not place your application dependencies here; they belong
     // in the individual module build.gradle files
@@ -20,7 +23,12 @@ allprojects {
   repositories {
     google()
     jcenter()
-    maven { url "https://jitpack.io" }
+    maven {
+      url "https://jitpack.io"
+    }
+    maven {
+      url 'https://maven.google.com/'
+    }
   }
 }
 
