--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,8 @@ dependencies {
   implementation 'com.google.firebase:firebase-core:16.0.3'
   implementation 'com.crashlytics.sdk.android:crashlytics:2.9.5'
 
+  implementation "com.opencsv:opencsv:4.0"
+
 }
 
 apply plugin: 'com.google.gms.google-services'
