--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
       android:theme="@style/AppTheme">
     <activity
         android:name=".ui.activities.DrawerActivity"
-        android:label=""
+        android:label="@string/app_name"
         android:launchMode="singleTop"
         android:theme="@style/AppTheme.NoActionBar">
       <intent-filter>
