--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
   implementation 'com.google.firebase:firebase-core:16.0.3'
   implementation 'com.crashlytics.sdk.android:crashlytics:2.9.5'
 
+  // CSV export
   implementation "com.opencsv:opencsv:4.0"
 }
 
