--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,7 +60,9 @@ dependencies {
   implementation 'com.crashlytics.sdk.android:crashlytics:2.9.5'
 
   // CSV export
-  implementation "com.opencsv:opencsv:4.0"
+  implementation("com.opencsv:opencsv:4.0") {
+    exclude group: 'commons-logging', module: 'commons-logging'
+  }
 }
 
 apply plugin: 'com.google.gms.google-services'
