--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ android {
     targetSdkVersion 28
     versionCode 1
     versionName "1.0"
-    testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+    testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
   }
   signingConfigs {
     config {
@@ -47,24 +47,24 @@ android {
 
 dependencies {
   implementation fileTree(include: ['*.jar'], dir: 'libs')
-  implementation 'com.android.support:appcompat-v7:28.0.0-rc01'
-  implementation 'com.android.support:design:28.0.0-rc01'
-  implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+  implementation 'androidx.appcompat:appcompat:1.0.2'
+  implementation 'com.google.android.material:material:1.1.0-alpha01'
+  implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
   testImplementation 'junit:junit:4.12'
-  androidTestImplementation 'com.android.support.test:runner:1.0.2'
-  androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+  androidTestImplementation 'androidx.test:runner:1.1.0'
+  androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
   // ViewModel and LiveData
-  implementation 'android.arch.lifecycle:extensions:1.1.1'
-  annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
-  // Room (use 1.1.0-beta3 for latest beta)
-  implementation 'android.arch.persistence.room:runtime:1.1.1'
-  annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
+  implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+  annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.0.0"
+  // Room
+  implementation 'androidx.room:room-runtime:2.1.0-alpha02'
+  annotationProcessor "androidx.room:room-compiler:2.1.0-alpha02"
   // Paging
-  implementation 'android.arch.paging:runtime:1.0.1'
+  implementation 'androidx.paging:paging-runtime:2.1.0-beta01'
   // Test helpers for LiveData
-  testImplementation 'android.arch.core:core-testing:1.1.1'
+  testImplementation 'androidx.arch.core:core-testing:2.0.0'
   // Test helpers for Room
-  testImplementation 'android.arch.persistence.room:testing:1.1.1'
+  testImplementation 'androidx.room:room-testing:2.1.0-alpha02'
   implementation 'com.github.humazed:RoomAsset:1.0.3'
 
   // Dagger 2
