--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,23 +48,23 @@ android {
 dependencies {
   implementation fileTree(include: ['*.jar'], dir: 'libs')
   implementation 'androidx.appcompat:appcompat:1.0.2'
-  implementation 'com.google.android.material:material:1.1.0-alpha01'
-  implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
+  implementation 'com.google.android.material:material:1.1.0-alpha06'
+  implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta1'
   testImplementation 'junit:junit:4.12'
-  androidTestImplementation 'androidx.test:runner:1.1.0'
-  androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+  androidTestImplementation 'androidx.test:runner:1.1.1'
+  androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
   // ViewModel and LiveData
   implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
   annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.0.0"
   // Room
-  implementation 'androidx.room:room-runtime:2.1.0-alpha02'
-  annotationProcessor "androidx.room:room-compiler:2.1.0-alpha02"
+  implementation 'androidx.room:room-runtime:2.1.0-beta01'
+  annotationProcessor "androidx.room:room-compiler:2.1.0-beta01"
   // Paging
-  implementation 'androidx.paging:paging-runtime:2.1.0-beta01'
+  implementation 'androidx.paging:paging-runtime:2.1.0'
   // Test helpers for LiveData
-  testImplementation 'androidx.arch.core:core-testing:2.0.0'
+  testImplementation 'androidx.arch.core:core-testing:2.0.1'
   // Test helpers for Room
-  testImplementation 'androidx.room:room-testing:2.1.0-alpha02'
+  testImplementation 'androidx.room:room-testing:2.1.0-beta01'
   implementation 'com.github.humazed:RoomAsset:1.0.3'
 
   // Dagger 2
@@ -73,8 +73,8 @@ dependencies {
   annotationProcessor "com.google.dagger:dagger-compiler:2.13"
 
   // Firebase Core and Crashlytics: Analytics, Crash Reporting
-  implementation 'com.google.firebase:firebase-core:16.0.5'
-  implementation 'com.crashlytics.sdk.android:crashlytics:2.9.6'
+  implementation 'com.google.firebase:firebase-core:16.0.9'
+  implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
   // CSV export
   implementation("com.opencsv:opencsv:4.0") {
