--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,8 +51,11 @@ dependencies {
   implementation 'com.google.android.material:material:1.1.0-alpha06'
   implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta1'
   testImplementation 'junit:junit:4.12'
-  androidTestImplementation 'androidx.test:runner:1.1.1'
   androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+  androidTestImplementation 'androidx.test:runner:1.1.1'
+  androidTestImplementation 'androidx.test:rules:1.1.1'
+  implementation 'androidx.test.espresso:espresso-idling-resource:3.1.1'
+
   // ViewModel and LiveData
   implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
   annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.0.0"
