--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,9 @@ android {
     sourceCompatibility JavaVersion.VERSION_1_8
     targetCompatibility JavaVersion.VERSION_1_8
   }
+  testOptions {
+    animationsDisabled = true
+  }
 }
 
 dependencies {
@@ -54,6 +57,8 @@ dependencies {
   androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
   androidTestImplementation 'androidx.test:runner:1.1.1'
   androidTestImplementation 'androidx.test:rules:1.1.1'
+  androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.1.1'
+  androidTestImplementation 'androidx.test.espresso:espresso-intents:3.1.1'
   implementation 'androidx.test.espresso:espresso-idling-resource:3.1.1'
 
   // ViewModel and LiveData
@@ -65,7 +70,7 @@ dependencies {
   // Paging
   implementation 'androidx.paging:paging-runtime:2.1.0'
   // Test helpers for LiveData
-  testImplementation 'androidx.arch.core:core-testing:2.0.1'
+  androidTestImplementation 'androidx.arch.core:core-testing:2.0.1'
   // Test helpers for Room
   testImplementation 'androidx.room:room-testing:2.1.0-beta01'
   implementation 'com.github.humazed:RoomAsset:1.0.3'
