--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,14 +66,14 @@ dependencies {
   implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
   annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.0.0"
   // Room
-  implementation 'androidx.room:room-runtime:2.2.0-alpha01'
-  annotationProcessor "androidx.room:room-compiler:2.2.0-alpha01"
+  implementation 'androidx.room:room-runtime:2.2.0-beta01'
+  annotationProcessor "androidx.room:room-compiler:2.2.0-beta01"
   // Paging
   implementation 'androidx.paging:paging-runtime:2.1.0'
   // Test helpers for LiveData
   androidTestImplementation 'androidx.arch.core:core-testing:2.0.1'
   // Test helpers for Room
-  testImplementation 'androidx.room:room-testing:2.2.0-alpha01'
+  testImplementation 'androidx.room:room-testing:2.2.0-beta01'
   implementation 'com.github.humazed:RoomAsset:1.0.3'
 
   // Dagger 2
@@ -82,7 +82,7 @@ dependencies {
   annotationProcessor "com.google.dagger:dagger-compiler:2.13"
 
   // Firebase Core and Crashlytics: Analytics, Crash Reporting
-  implementation 'com.google.firebase:firebase-core:17.0.1'
+  implementation 'com.google.firebase:firebase-core:17.2.0'
   implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
   // CSV export
