--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-android'
 apply plugin: 'io.fabric'
 
 sourceCompatibility = 1.8
@@ -89,6 +91,12 @@ dependencies {
   implementation("com.opencsv:opencsv:4.0") {
     exclude group: 'commons-logging', module: 'commons-logging'
   }
+  implementation "androidx.core:core-ktx:1.2.0-alpha03"
+  implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0"
+  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
 apply plugin: 'com.google.gms.google-services'
+repositories {
+  mavenCentral()
+}
