--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+  ext.kotlin_version = '1.3.50'
 
   repositories {
     google()
@@ -13,6 +14,7 @@ buildscript {
     classpath 'com.android.tools.build:gradle:3.4.2'
     classpath 'com.google.gms:google-services:4.3.0'
     classpath 'io.fabric.tools:gradle:1.28.1'
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
     // NOTE: Do not place your application dependencies here; they belong
     // in the individual module build.gradle files
