tests for SenseDisplay, mock out parts of speech resources for testing

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,6 +93,9 @@ dependencies {
   implementation "androidx.core:core-ktx:1.2.0-beta01"
   implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0"
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+  testImplementation "org.mockito:mockito-core:2.19.0"
+  testImplementation 'org.mockito:mockito-inline:2.13.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
