--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-  ext.kotlin_version = '1.3.50'
+  ext.kotlin_version = '1.3.72'
 
   repositories {
     google()
     jcenter()
-    maven {
-      url 'https://maven.fabric.io/public'
-    }
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:4.0.0'
-    classpath 'com.google.gms:google-services:4.3.2'
-    classpath 'io.fabric.tools:gradle:1.28.1'
+    classpath 'com.android.tools.build:gradle:4.0.1'
+    classpath 'com.google.gms:google-services:4.3.3'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    classpath 'com.google.firebase:firebase-crashlytics-gradle:2.2.0'
 
     // NOTE: Do not place your application dependencies here; they belong
     // in the individual module build.gradle files
