--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.firebase.crashlytics'
+apply plugin: 'kotlin-kapt'
 
 sourceCompatibility = 1.8
 
@@ -70,7 +71,7 @@ dependencies {
   implementation 'androidx.lifecycle:lifecycle-common-java8:2.1.0'
   // Room
   implementation 'androidx.room:room-runtime:2.2.0'
-  annotationProcessor "androidx.room:room-compiler:2.2.0"
+  kapt "androidx.room:room-compiler:2.2.0"
   // Paging
   implementation 'androidx.paging:paging-runtime:2.1.0'
   // Test helpers for LiveData
@@ -81,7 +82,7 @@ dependencies {
   // Dagger 2
   implementation "com.google.dagger:dagger-android-support:2.13"
   implementation "com.google.dagger:dagger:2.13"
-  annotationProcessor "com.google.dagger:dagger-compiler:2.13"
+  kapt 'com.google.dagger:dagger-compiler:2.13'
 
   // Firebase Core and Crashlytics: Analytics, Crash Reporting
   implementation 'com.google.firebase:firebase-crashlytics:17.1.1'
