--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,6 +93,7 @@ dependencies {
   androidTestImplementation "androidx.arch.core:core-testing:$arch_version"
   // Test helpers for Room
   testImplementation "androidx.room:room-testing:$room_version"
+  implementation "androidx.room:room-ktx:$room_version"
 
   // Dagger 2
   implementation "com.google.dagger:dagger-android-support:2.13"
