--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,7 +1,7 @@
 # This workflow will run unit tests with Gradle
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
 
-name: Unit Tests with Gradle
+name: Unit Tests
 
 on:
   push:
@@ -16,11 +16,18 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+
+    - name: Bash Command Lines for GitHub Actions
+      uses: jdickey/bash@v.1.1.1
+      args: ["echo -e 'storePassword=fake_pwd\nkeyPassword=fake_pwd\nkeyAlias=fake_key\nstoreFile=fake_file' > keystore.properties"]
+
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+
     - name: Unit Tests
       run: ./gradlew test
