--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,9 +22,8 @@ jobs:
       with:
         java-version: 1.8
 
-    - name: Bash Command Lines for GitHub Actions
-      uses: jdickey/bash@v.1.1.1
-      args: ["echo -e 'storePassword=fake_pwd\nkeyPassword=fake_pwd\nkeyAlias=fake_key\nstoreFile=fake_file' > keystore.properties"]
+    - name: Create fake keystore
+      run: echo -e 'storePassword=fake_pwd\nkeyPassword=fake_pwd\nkeyAlias=fake_key\nstoreFile=fake_file' > keystore.properties
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
