--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -17,10 +17,12 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
+    - name: Set up JDK 11
+      uses: actions/setup-java@v2
       with:
-        java-version: 1.8
+        distribution: 'zulu'
+        java-version: '11'
+        java-package: jdk
 
     - name: Create fake keystore
       run: echo -e 'storePassword=fake_pwd\nkeyPassword=fake_pwd\nkeyAlias=fake_key\nstoreFile=fake_file' > keystore.properties
