--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
       android:theme="@style/AppTheme">
     <activity
         android:name=".ui.activities.DrawerActivity"
-        android:label="@string/app_name"
+        android:exported="true"
         android:launchMode="singleTop"
         android:theme="@style/AppTheme.NoActionBar">
       <intent-filter>
@@ -34,7 +34,9 @@
           android:resource="@xml/searchable"/>
     </activity>
 
-    <receiver android:name=".ui.widget.JishoTomoJlptWidget">
+    <receiver
+        android:name=".ui.widget.JishoTomoJlptWidget"
+        android:exported="false">
       <intent-filter>
         <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
       </intent-filter>
@@ -44,7 +46,9 @@
           android:resource="@xml/jisho_tomo_jlpt_widget_info"/>
     </receiver>
 
-    <activity android:name=".ui.widget.JishoTomoJlptWidgetConfigureActivity">
+    <activity
+        android:name=".ui.widget.JishoTomoJlptWidgetConfigureActivity"
+        android:exported="false">
       <intent-filter>
         <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE"/>
       </intent-filter>
