--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,22 +62,14 @@ dependencies {
 
   ktlint "com.pinterest:ktlint:0.37.2"
 
-  implementation 'androidx.appcompat:appcompat:1.1.0'
-  implementation 'com.google.android.material:material:1.1.0-beta01'
-  implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta4'
-  testImplementation 'junit:junit:4.12'
-  androidTestImplementation 'androidx.test:runner:1.2.0'
-  androidTestImplementation 'androidx.test:rules:1.2.0'
-  androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-  androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-  androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.2.0'
-  androidTestImplementation 'androidx.test.espresso:espresso-intents:3.2.0'
-  implementation 'androidx.test.espresso:espresso-idling-resource:3.2.0'
+  implementation 'androidx.appcompat:appcompat:1.4.1'
+  implementation 'com.google.android.material:material:1.5.0'
+  implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
 
-  def lifecycle_version = "2.2.0"
-  def arch_version = "2.1.0"
-  def paging_version = "2.1.2"
+  def lifecycle_version = "2.4.1"
   def room_version = "2.4.2"
+  def android_test_version = "1.4.0"
+  def espresso_version = "3.4.0"
 
   // ViewModel and LiveData
   implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
@@ -88,12 +80,7 @@ dependencies {
   implementation "androidx.room:room-runtime:$room_version"
   kapt "androidx.room:room-compiler:$room_version"
   // Paging
-  implementation "androidx.paging:paging-runtime:$paging_version"
-  // Test helpers for LiveData
-  androidTestImplementation "androidx.arch.core:core-testing:$arch_version"
-  // Test helpers for Room
-  testImplementation "androidx.room:room-testing:$room_version"
-  implementation "androidx.room:room-ktx:$room_version"
+  implementation "androidx.paging:paging-runtime:2.1.2"
 
   // Dagger 2
   implementation "com.google.dagger:dagger-android-support:2.13"
@@ -110,11 +97,27 @@ dependencies {
   }
 
   // AndroidX KTX Extensions
-  implementation "androidx.core:core-ktx:1.2.0-beta01"
-  implementation "androidx.activity:activity-ktx:1.1.0"
-  implementation "androidx.fragment:fragment-ktx:1.2.5"
+  implementation "androidx.core:core-ktx:1.7.0"
+  implementation "androidx.activity:activity-ktx:1.4.0"
+  implementation "androidx.fragment:fragment-ktx:1.4.1"
 
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+
+  // Testing
+  testImplementation 'junit:junit:4.12'
+  androidTestImplementation "androidx.test:runner:$android_test_version"
+  androidTestImplementation "androidx.test:rules:$android_test_version"
+  androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+  androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
+  androidTestImplementation "androidx.test.espresso:espresso-contrib:$espresso_version"
+  androidTestImplementation "androidx.test.espresso:espresso-intents:$espresso_version"
+  implementation "androidx.test.espresso:espresso-idling-resource:$espresso_version"
+
+  // Test helpers for LiveData
+  androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+  // Test helpers for Room
+  testImplementation "androidx.room:room-testing:$room_version"
+  implementation "androidx.room:room-ktx:$room_version"
 }
 
 task ktlint(type: JavaExec, group: "verification") {
