--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,7 @@ dependencies {
   def room_version = "2.4.2"
   def android_test_version = "1.4.0"
   def espresso_version = "3.4.0"
+  def compose_version = "1.1.1"
 
   // ViewModel and LiveData
   implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
@@ -102,9 +103,10 @@ dependencies {
   }
 
   // Compose
+  implementation "androidx.compose.material:material:$compose_version"
+  implementation "androidx.compose.ui:ui-tooling:$compose_version"
+  implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
   implementation 'androidx.activity:activity-compose:1.4.0'
-  implementation 'androidx.compose.material:material:1.1.1'
-  implementation 'androidx.compose.ui:ui-tooling:1.1.1'
   implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1'
 
   // AndroidX KTX Extensions
