--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,7 +86,8 @@ dependencies {
   implementation "androidx.room:room-runtime:$room_version"
   kapt "androidx.room:room-compiler:$room_version"
   // Paging
-  implementation "androidx.paging:paging-runtime:2.1.2"
+  implementation "androidx.paging:paging-runtime-ktx:3.1.1"
+  implementation "androidx.room:room-paging:2.4.2"
 
   // Dagger 2
   implementation "com.google.dagger:dagger-android-support:2.13"
