--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,11 +9,12 @@ def keystoreProperties = new Properties()
 keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
 android {
-  compileSdkVersion 31
+  namespace 'net.emojiparty.android.jishotomo'
+  compileSdk 34
   defaultConfig {
     applicationId "net.emojiparty.android.jishotomo"
     minSdkVersion 21
-    targetSdkVersion 31
+    targetSdkVersion 34
     versionCode 1
     versionName "1.0"
     testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -43,17 +44,24 @@ android {
     compose true
   }
   compileOptions {
-    sourceCompatibility JavaVersion.VERSION_11
-    targetCompatibility JavaVersion.VERSION_11
+    sourceCompatibility JavaVersion.VERSION_17
+    targetCompatibility JavaVersion.VERSION_17
   }
   kotlinOptions {
-    jvmTarget = "11"
+    jvmTarget = "17"
   }
   composeOptions {
-    kotlinCompilerExtensionVersion '1.1.1'
+    kotlinCompilerExtensionVersion '1.5.4'
   }
   testOptions {
     animationsDisabled = true
+  }
+}
+
+kapt {
+  javacOptions {
+    option("-source", "17")
+    option("-target", "17")
   }
 }
 
@@ -66,15 +74,15 @@ dependencies {
 
   ktlint "com.pinterest:ktlint:0.37.2"
 
-  implementation 'androidx.appcompat:appcompat:1.4.1'
-  implementation 'com.google.android.material:material:1.5.0'
-  implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+  implementation 'androidx.appcompat:appcompat:1.6.1'
+  implementation 'com.google.android.material:material:1.10.0'
+  implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
-  def lifecycle_version = "2.4.1"
-  def room_version = "2.4.2"
+  def lifecycle_version = "2.7.0"
+  def room_version = "2.6.1"
   def android_test_version = "1.4.0"
   def espresso_version = "3.4.0"
-  def compose_version = "1.1.1"
+  def compose_version = "1.5.4"
 
   // ViewModel and LiveData
   implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
@@ -85,13 +93,14 @@ dependencies {
   implementation "androidx.room:room-runtime:$room_version"
   kapt "androidx.room:room-compiler:$room_version"
   // Paging
-  implementation "androidx.paging:paging-runtime-ktx:3.1.1"
-  implementation "androidx.room:room-paging:2.4.2"
+  implementation "androidx.paging:paging-runtime-ktx:3.2.1"
+  implementation "androidx.room:room-paging:$room_version"
 
   // Dagger 2
-  implementation "com.google.dagger:dagger-android-support:2.13"
-  implementation "com.google.dagger:dagger:2.13"
-  kapt 'com.google.dagger:dagger-compiler:2.13'
+  def dagger_version = "2.48"
+  implementation "com.google.dagger:dagger-android-support:$dagger_version"
+  implementation "com.google.dagger:dagger:$dagger_version"
+  kapt "com.google.dagger:dagger-compiler:$dagger_version"
 
   // Firebase Core and Crashlytics: Analytics, Crash Reporting
   implementation 'com.google.firebase:firebase-crashlytics:17.2.1'
