--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-  ext.kotlin_version = '1.6.10'
+  ext.kotlin_version = '1.9.20'
 
   repositories {
     google()
-    jcenter()
+    mavenCentral()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:7.1.3'
-    classpath 'com.google.gms:google-services:4.3.10'
+    classpath 'com.android.tools.build:gradle:8.1.4'
+    classpath 'com.google.gms:google-services:4.4.0'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     classpath 'com.google.firebase:firebase-crashlytics-gradle:2.5.2'
 
@@ -21,7 +21,7 @@ buildscript {
 allprojects {
   repositories {
     google()
-    jcenter()
+    mavenCentral()
     maven {
       url "https://jitpack.io"
     }
